in-progress-labels/manifests/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
spec:
  replicas: 5
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: rollouts-demo
          image: argoproj/rollouts-demo:blue
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
  strategy:
    canary:
      canaryService: argo-rollouts-canary-service
      stableService: argo-rollouts-stable-service
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: argo-rollouts-http-route
      steps:
        - setWeight: 50
        - pause: {}
        # The plugin only drops the in-progress label when it is called with
        # desiredWeight == 0 (pkg/plugin/labels.go). Parking on setWeight: 100
        # is therefore a state where the rollout looks finished but the label
        # is still on the live HTTPRoute.
        - setWeight: 100
        - pause: {}
